stuff/podman-k8s/examples/certs-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    name: apps
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    name: gateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: certs
  labels:
    name: certs
    purpose: tls-certificates
