stuff/podman-k8s/examples/certs-demo/referencegrant.yaml
# Allow Gateway to use TLS secret from 'certs' namespace
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-tls-secret
  namespace: certs
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
  to:
    - group: ""
      kind: Secret
      name: httpbin-local-tls
