stuff/podman-k8s/examples/certs-demo/httpbin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
