stuff/podman-k8s/examples/certs-demo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: apps
spec:
  hostnames:
    - httpbin.local
  parentRefs:
    - name: gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: httpbin
          port: 80
